Migrated from Bootstrap 5.1.3 to TailwindCSS 3.3.2

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}404 Error{% endblock %}
+{% block title %}page not found{% endblock %}
 
 {% block content %}
 <div class="page-header">
