--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}500 Error{% endblock %}
+{% block title %}internal server error{% endblock %}
 
 {% block content %}
 <div class="page-header">
