--- a/app/static/src/tailwind.css
+++ b/app/static/src/tailwind.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
+
+@font-face {
+    font-family: 'Roboto Mono';
+    src: url(../fonts/RobotoMono-Regular.ttf);
+    font-weight: 400;
+    font-style: normal;
+};
+
+@font-face {
+    font-family: 'Lexend Deca';
+    src: url(../fonts/LexendDeca-Regular.ttf);
+    font-weight: 400;
+    font-style: normal;
+};
+
+@layer base {
+    html {
+        @apply selection:bg-main-color selection:text-bg-color;
+        
+        font-family: Roboto Mono;
+        ::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        };
+    };
+};
+
+
 @tailwind utilities;
