--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,20 @@
 {% extends "base.html" %}
+{% from "macros.html" import todolistItem %}
 
 {% block content %}
+<div class="grid grid-cols-10 max-w-7xl h-full mx-auto px-8 gap-2">
+  <div class="col-span-2 flex flex-col items-center justify-center text-start gap-2">
+    <div class="flex flex-col flex-grow justify-start w-full h-0 gap-2 overflow-y-auto">
+      {% for task in tasks %}
+      {{ todolistItem(task)}}
+      {% endfor %}
+    </div>
+    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+  </div>
+
+  <div class="col-span-6 bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+  
+  <div class="col-span-2 bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+</div>
 {% endblock %}
