Implemented search functionality and temporary task addition on index page

--- a/app/static/src/tailwind.css
+++ b/app/static/src/tailwind.css
@@ -18,6 +18,10 @@
 @layer base {
     html {
         @apply selection:bg-main-color selection:text-bg-color;
+
+        :focus {
+            outline: none;
+        };
         
         font-family: Roboto Mono;
         ::-webkit-scrollbar {
