--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-{% from "macros.html" import svgNavbar, svgFooter, footerKey %}
+{% from "macros.html" import svgBase, svgNavbar, svgFooter, footerKey %}
 
 
 <!DOCTYPE html>
@@ -26,17 +26,24 @@
 
   <nav class="flex-none select-none h-24 bg-bg-color">
     <div class="flex flex-row items-center justify-between max-w-7xl h-full mx-auto px-8">
+      <div class="select-none fill-current text-text-color hover:text-main-color transition-colors mr-2">
+        <a href="{{ url_for('main.index') }}">
+          <svg class="fill-current w-8 h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path d="M418.4 157.9c35.3-8.3 61.6-40 61.6-77.9c0-44.2-35.8-80-80-80c-43.4 0-78.7 34.5-80 77.5L136.2 151.1C121.7 136.8 101.9 128 80 128c-44.2 0-80 35.8-80 80s35.8 80 80 80c12.2 0 23.8-2.7 34.1-7.6L259.7 407.8c-2.4 7.6-3.7 15.8-3.7 24.2c0 44.2 35.8 80 80 80s80-35.8 80-80c0-27.7-14-52.1-35.4-66.4l37.8-207.7zM156.3 232.2c2.2-6.9 3.5-14.2 3.7-21.7l183.8-73.5c3.6 3.5 7.4 6.7 11.6 9.5L317.6 354.1c-5.5 1.3-10.8 3.1-15.8 5.5L156.3 232.2z"/>
+          </svg>
+        </a>
+      </div>
       <h2 class="relative self-center text-[2rem] font-Lexend-Deca text-text-color">
         <div class="absolute text-[.65rem] leading-[.65rem] left-[.25rem] top-[.1rem] text-sub-color">project</div>
         <a href="{{ url_for('main.index') }}">equilibrium</a>
       </h2>
       <div class="flex flex-row flex-grow items-center pt-1 ml-4 gap-x-4 first:pr-0 last:pl-0">
-        {{ svgNavbar("main.about", "about") }}
-        {{ svgNavbar("main.stats", "stats") }}
-        {{ svgNavbar("main.settings", "settings") }}
+        {{ svgNavbar("main.about", "info") }}
+        {{ svgNavbar("main.stats", "chart-simple") }}
+        {{ svgNavbar("main.settings", "gear") }}
         <div class="flex-grow"></div>
-        {{ svgNavbar("auth.login", "anon") }}
-        {{ svgNavbar("main.settings", "notifications") }}
+        {{ svgNavbar("auth.login", "user_") }}
+        {{ svgNavbar("main.settings", "bell") }}
       </div>
     </div>
   </nav>
@@ -48,19 +55,19 @@
 
   <footer class="flex-none select-none h-28 mt-4">
     <div class="flex flex-col text-center max-w-7xl mx-auto px-8 pt-4 text-xs">
-      <div class="group leading-5 mb-4 px-[.1rem]">
+      <div class="leading-5 mb-4 px-[.1rem] group">
         {{ footerKey("esc") }} or {{ footerKey("ctrl") }}+{{ footerKey("shift") }}+{{ footerKey("p") }} - command line
       </div>
       <div class="flex flex-row flex-grow items-center pt-2 ml-4 gap-x-4 first:pr-0 last:pl-0">
-        {{ svgFooter("mailto:nguyentuduck@gmail.com", 1, "gmail", "_blank", "contact") }}
-        {{ svgFooter("https://www.buymeacoffee.com/ntduck", 1, "donate", "_blank", "support") }}
-        {{ svgFooter("https://github.com/NTDuck/project-equilibrium", 1, "github", "_blank", "github") }}
+        {{ svgFooter("mailto:nguyentuduck@gmail.com", 1, "envelope", "_blank", "contact") }}
+        {{ svgFooter("https://www.buymeacoffee.com/ntduck", 1, "circle-dollar-to-slot", "_blank", "support") }}
+        {{ svgFooter("https://github.com/NTDuck/project-equilibrium", 1, "code", "_blank", "github") }}
         {{ svgFooter("main.index", 0, "discord", "_self", "discord") }}
-        {{ svgFooter("main.index", 0, "ToS", "_self", "terms") }}
-        {{ svgFooter("main.index", 0, "security", "_self", "security") }}
-        {{ svgFooter("main.index", 0, "privacy", "_self", "privacy") }}
+        {{ svgFooter("main.index", 0, "file-invoice", "_self", "terms") }}
+        {{ svgFooter("main.index", 0, "shield-halved", "_self", "security") }}
+        {{ svgFooter("main.index", 0, "lock", "_self", "privacy") }}
         <div class="flex-grow"></div>
-        {{ svgFooter("main.index", 0, "version", "_self", "v0.2.0") }}
+        {{ svgFooter("main.index", 0, "code-branch", "_self", "v0.2.0") }}
       </div>
     </div>
   </footer>
