--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -6,13 +6,13 @@
 {% block content %}
 <div class="grid grid-cols-2 place-content-center gap-4 max-w-2xl h-full mx-auto px-8">
   <div class="select-none">
-    <img src="{{ url_for('static', filename='/images/gifs/error.gif') }}" alt="error">
+    <img src="{{ url_for('static', filename='/images/gifs/' + gifName + '.gif') }}" alt="error">
   </div>
   <div class="grid grid-cols-1 gap-4 h-full place-content-between place-items-center box-border">
     <div class="text-7xl text-center text-main-color box-border">{{ err }}</div>
     <div class="text-center line-clamp-4 overflow-y-auto">{{ description }}</div>
     <div class="select-none mt-4">
-      <a href="{{ url_for('main.index') }}" class="block px-6 py-4 rounded-lg transition-colors duration-[.125s] text-text-color bg-sub-alt-color hover:bg-text-color hover:text-bg-color box-border fill-current">
+      <a href="{{ url_for('main.index') }}" class="block px-6 py-4 rounded-lg transition-colors text-text-color bg-sub-alt-color hover:bg-text-color hover:text-bg-color box-border fill-current">
         <svg class="w-4 h-4 mb-[.3rem] inline-block fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
           <path d="M543.8 287.6c17 0 32-14 32-32.1c1-9-3-17-11-24L512 185V64c0-17.7-14.3-32-32-32H448c-17.7 0-32 14.3-32 32v36.7L309.5 7c-6-5-14-7-21-7s-15 1-22 8L10 231.5c-7 7-10 15-10 24c0 18 14 32.1 32 32.1h32v69.7c-.1 .9-.1 1.8-.1 2.8V472c0 22.1 17.9 40 40 40h16c1.2 0 2.4-.1 3.6-.2c1.5 .1 3 .2 4.5 .2H160h24c22.1 0 40-17.9 40-40V448 384c0-17.7 14.3-32 32-32h64c17.7 0 32 14.3 32 32v64 24c0 22.1 17.9 40 40 40h24 32.5c1.4 0 2.8 0 4.2-.1c1.1 .1 2.2 .1 3.3 .1h16c22.1 0 40-17.9 40-40V455.8c.3-2.6 .5-5.3 .5-8.1l-.7-160.2h32z"/>
         </svg>
