--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,11 +1,10 @@
 {% from "constant.html" import ICONS %}
 
 
-<!-- svgBase -> svgNavbar, svgFooter -->
-{% macro svgBase(destUrl="#", isAbsolute=1, svgName="", target="_self", useText="", _divStyle="", _aStyle="") %}
-<div class="select-none transition-colors duration-[.125s] fill-current text-sub-color hover:text-text-color {{ _divStyle|safe }}">
-  <a {% if isAbsolute == 1 %}href="{{ destUrl }}"{% else %}href="{{ url_for(destUrl) }}"{% endif %} target="{{ target|e }}">
-    <svg class="fill-current {{ _aStyle}}" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS[svgName].dimension }}">
+{% macro svgBase(destUrl="#", isAbsolute=1, svgName="", target="_self", useText="", _divStyle="", _aStyle="", _svgStyle="") %}
+<div class="select-none transition-colors fill-current text-sub-color hover:text-text-color {{ _divStyle|safe }}">
+  <a {% if isAbsolute == 1 %}href="{{ destUrl }}"{% else %}href="{{ url_for(destUrl) }}"{% endif %} target="{{ target|e }}" class="{{ _aStyle }}">
+    <svg class="fill-current {{ _svgStyle}}" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS[svgName].dimension }}">
       {{ ICONS[svgName].path|safe }}
     </svg>
     {{ useText }}
@@ -15,29 +14,47 @@
 
 
 {% macro svgNavbar(destUrl="#", svgName="") %}
-  {{ svgBase(destUrl=destUrl, isAbsolute=0, svgName=svgName, target="_self", useText="", _divStyle="px-2", _aStyle="w-[1.1rem] h-[1.1rem]") }}
+  {{ svgBase(destUrl=destUrl, isAbsolute=0, svgName=svgName, _divStyle="px-2", _svgStyle="w-[1.1rem] h-[1.1rem]") }}
 {% endmacro %}
 
 
 {% macro svgFooter(destUrl="#", isAbsolute=1, svgName="", target="_self", useText="") %}
-  {{ svgBase(destUrl=destUrl, isAbsolute=isAbsolute, svgName=svgName, target=target, useText=useText, _divStyle="gap-[.25em] px-[.25em] leading-4 text-[.75rem] w-fit h-fit justify-start items-baseline", _aStyle="inline-block w-3 h-3 mr-[-.15rem]") }}
+  {{ svgBase(destUrl=destUrl, isAbsolute=isAbsolute, svgName=svgName, target=target, useText=useText, _divStyle="gap-[.25em] px-[.25em] leading-4 text-[.75rem] w-fit h-fit justify-start items-baseline", _svgStyle="inline-block w-3 h-3 mr-[-.15rem]") }}
 {% endmacro %}
 
 
 {% macro footerKey(key) %}
-<span class="transition-colors duration-[.125s] rounded-[.1rem] px-[.3rem] py-[.1rem] mx-[.25rem] leading-[.7rem] text-[.7rem] bg-sub-color text-bg-color hover:bg-text-color">{{ key }}</span>
+<span class="transition-colors rounded-[.1rem] px-[.3rem] py-[.1rem] mx-[.25rem] leading-[.7rem] text-[.7rem] bg-sub-color text-bg-color hover:bg-text-color">{{ key }}</span>
 {% endmacro %}
 
 
+{% macro todoItemToggleBar() %}
+
+{% endmacro %}
+
+
+<!-- added undeclared classNames for DOM traversal -->
 {% macro todolistItem(content="") %}
-<div class="flex flex-row align-middle py-2 px-4 w-full h-fit bg-sub-alt-color rounded-lg">
-  <div class="flex-grow truncate">{{ content|e }}</div>
-  <div class="flex-none">
-    <a href="{{ url_for('main.index') }}" class="inline-block transition-colors duration-[.125s] hover:text-text-color box-border fill-current">
-      <svg class="w-4 h-4 ml-2 inline-block fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-        <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/>
-      </svg>
-    </a>
+<div class="flex flex-row items-center py-2 px-4 w-full h-fit bg-sub-alt-color rounded-lg group todolist-item">
+  <div class="flex-grow transition-all hover:text-text-color todolist-item-content">{{ content|e }}</div>
+  <div class="flex flex-col flex-none opacity-0 text-sub-color group-hover:opacity-100 transition-all duration-300">
+    {{ svgBase(destUrl="#", svgName="trash-can", _divStyle="inline-block", _svgStyle="inline-block w-4 h-4 ml-2") }}
+    {{ svgBase(destUrl="#", svgName="clipboard_", _divStyle="inline-block", _aStyle="todolist-item-copyButton", _svgStyle="inline-block w-4 h-4 ml-2") }}
   </div>
+  <span class="relative"></span>
 </div>
+{% endmacro %}
+
+
+{% macro todolistComponent(method="post", outerDivId="", inputId="", buttonId="", inputName="", buttonType="submit", svgName="") %}
+<form action="#" method="{{ method }}" class="flex-none h-fit w-full">
+  <div id="{{ outerDivId }}" class="flex flex-row items-center py-2 px-4 bg-sub-alt-color transition-colors duration-300 rounded-lg">
+    <input type="text" name="{{ inputName }}" id="{{ inputId }}" class="flex-grow w-20 rounded-lg caret-transparent text-text-color bg-transparent transition-colors duration-300">
+    <button type="{{ buttonType }}" id="{{ buttonId }}" class="flex-none transition-colors duration-300 text-sub-color hover:text-text-color">
+      <svg class="w-4 h-4 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS[svgName].dimension }}">
+        {{ ICONS[svgName].path|safe }}
+      </svg>
+    </button>
+  </div>
+</form>
 {% endmacro %}
