Re-implemented error handling and re-designed error pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
 <head>
-  <title>{% block title %}equilibrium: a minimal workspace{% endblock %}</title>
+  <title>equilibrium: {% block title %}a minimal workspace{% endblock %}</title>
 
   {% block metas %}
   <meta charset="utf-8">
