--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,14 +15,15 @@
       {% endfor %}
     </div>
 
-    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center"></div>
 
-    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center"></div>
   </div>
 
-  <div class="col-span-6 bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+  <div class="col-span-6 bg-sub-alt-color rounded-lg"></div>
   
-  <div class="col-span-2 bg-sub-alt-color rounded-lg text-center">arbitrary value</div>
+  <div class="col-span-2 bg-sub-alt-color rounded-lg">
+  </div>
 </div>
 {% endblock %}
 
