Fixed color transition bugs in todolist items

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   {% endblock styles %}
 </head>
-<body class="flex flex-col h-screen bg-bg-color text-sub-color antialiased">
+<body class="flex flex-col h-screen bg-bg-color text-sub-color transition-all antialiased">
 
   <nav class="flex-none select-none h-24 bg-bg-color">
     <div class="flex flex-row items-center justify-between max-w-7xl h-full mx-auto px-8">
