--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,8 @@
       {% endfor %}
     </div>
 
-    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center"></div>
+    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center">
+    </div>
 
     <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center"></div>
   </div>
