--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,5 @@
 {% from "macros.html" import svgBase, svgNavbar, svgFooter, footerKey %}
 
-
 <!DOCTYPE html>
 <html lang="en" class="h-full">
 <head>
@@ -55,7 +54,7 @@
   <footer class="flex-none select-none h-28 mt-4 hidden">
     <div class="flex flex-col text-center max-w-7xl mx-auto px-8 pt-4 text-xs">
       <div class="leading-5 mb-4 px-[.1rem] group">
-        {{ footerKey("esc") }} or {{ footerKey("ctrl") }}+{{ footerKey("shift") }}+{{ footerKey("p") }} - command line
+        {{ footerKey("ctrl") }}+{{ footerKey("shift") }}+{{ footerKey("p") }} - command line
       </div>
       <div class="flex flex-row flex-grow items-center pt-2 ml-4 gap-x-4 first:pr-0 last:pl-0">
         {{ svgFooter("mailto:nguyentuduck@gmail.com", 1, "envelope", "_blank", "contact") }}
@@ -72,8 +71,8 @@
   </footer>
 
   {% block scripts %}
-  <script src="{{ url_for('static', filename='js/vendor/jquery-3.7.0.min.js') }}"></script>
   <!-- {{ moment.include_moment() }} -->
+  <script src="{{ url_for('static', filename='js/vendor/jquery-3.7.0.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   {% endblock scripts %}
 </body>
