--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% from "macros.html" import todolistItem, todolistBar %}
+{% from "macros.html" import todolistItem, todolistBar, svgTimerButton %}
 
 {% block content %}
 <div class="grid grid-cols-10 max-w-7xl h-full mx-auto px-8 gap-2 text-sub-color">
@@ -15,15 +15,27 @@
       {% endfor %}
     </div>
 
-    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center">
+    <div class="flex flex-none items-center justify-center h-20 w-full rounded-lg bg-sub-alt-color">
+      <h2 id="timer-display-number" class="text-main-color"></h2>
     </div>
 
     <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center"></div>
   </div>
 
-  <div class="col-span-6 bg-sub-alt-color rounded-lg"></div>
+  <div class="flex flex-col col-span-6 gap-2 rounded-lg bg-sub-alt-color">
+    <div class="flex flex-col flex-grow items-center justify-center">
+      <div id="timer-display-container" class="w-2/3 h-8 p-1 rounded-lg transition-colors bg-bg-color">
+        <div id="timer-display-progress" class="max-w-full h-full rounded-md transition-colors duration-300 bg-sub-color"></div>
+      </div>
+    </div>
+    <div class="flex flex-row flex-none h-20 items-center justify-center gap-4">
+      {{ svgTimerButton(svgName="pause", buttonId="timer-button-pause") }}
+      {{ svgTimerButton(svgName="play", buttonId="timer-button-play") }}
+      {{ svgTimerButton(svgName="forward", buttonId="timer-button-skip") }}
+    </div>
+  </div>
   
-  <div class="col-span-2 bg-sub-alt-color rounded-lg">
+  <div class="col-span-2 rounded-lg bg-sub-alt-color">
   </div>
 </div>
 {% endblock %}
