--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,14 +19,16 @@
       <h2 id="timer-display-number" class="text-main-color"></h2>
     </div>
 
-    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center"></div>
+    <div class="flex-none h-20 w-full bg-sub-alt-color rounded-lg text-center">
+    </div>
   </div>
 
   <div class="flex flex-col col-span-6 gap-2 rounded-lg bg-sub-alt-color">
-    <div class="flex flex-col flex-grow items-center justify-center">
+    <div class="flex flex-col flex-grow items-center justify-around">
       <div id="timer-display-container" class="w-2/3 h-8 p-1 rounded-lg transition-colors bg-bg-color">
         <div id="timer-display-progress" class="max-w-full h-full rounded-md transition-colors duration-300 bg-sub-color"></div>
       </div>
+    <img id="timer-display-gif" src="{{ url_for('static', filename='/images/gifs/pomodoro/ht.gif') }}" class="w-2/3 rounded-lg">
     </div>
     <div class="flex flex-row flex-none h-20 items-center justify-center gap-4">
       {{ svgTimerButton(svgName="pause", buttonId="timer-button-pause") }}
