Implemented user data export/import

--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% from "constant.html" import ICONS %}
+{% from "constants.html" import ICONS %}
 
 
 {% block title %}{{ err_name }}{% endblock %}
