--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,24 +1,19 @@
 {% extends "base.html" %}
-{% from "macros.html" import svgNavbar, todolistItem, todolistBar, svgTimerButton, svgUserDataButton %}
+{% from "macros.html" import svgNavbar, utilsItem, utilsBar, svgTimerButton, svgUserDataButton, chatbotServerMsg %}
 
 {% block content %}
-<div class="grid grid-cols-10 max-w-7xl h-full mx-auto px-8 gap-2 text-sub-color">
-  <div class="col-span-2 flex flex-col items-center justify-center text-start gap-2">
-
-    {{ todolistBar(outerDivId="todolist-input-outerDiv", inputId="todolist-input-input", buttonId="todolist-input-button", inputName="todolist-item-add", svgName="circle-plus") }}
-
-    {{ todolistBar(method="", outerDivId="todolist-search-outerDiv", inputId="todolist-search-input", buttonId="todolist-search-button", buttonType="button", svgName="magnifying-glass") }}
-
+<div class="grid grid-cols-4 max-w-7xl h-full mx-auto px-8 gap-2 text-sub-color">
+  <div class="col-span-1 flex flex-col items-center justify-center text-start gap-2">
+    {{ utilsBar(apiRoute="api.add_todolist_item", outerDivId="todolist-input-outerDiv", inputId="todolist-input-input", buttonId="todolist-input-button", inputName="todolist-item-add", svgName="circle-plus") }}
+    {{ utilsBar(outerDivId="todolist-search-outerDiv", inputId="todolist-search-input", buttonId="todolist-search-button", buttonType="button", svgName="magnifying-glass") }}
     <div id="todolist-list" class="flex flex-col flex-grow justify-start w-full h-0 gap-2 overflow-y-auto scroll-smooth snap-mandatory snap-always snap-y">
       {% for item in todolistItems %}
-      {{ todolistItem(content=item.value) }}
+      {{ utilsItem(content=item.value, apiRouteEdit="api.edit_todolist_item", apiRouteDelete="api.delete_todolist_item", inputNameEdit="todolist-item-edit", inputNameDelete="todolist-item-delete") }}
       {% endfor %}
     </div>
-
     <div class="flex flex-col flex-none items-center justify-center w-full h-20 rounded-lg bg-sub-alt-color text-main-color">
       <h2 id="timer-display-number"></h2>
     </div>
-
     <div class="flex flex-row flex-none items-center justify-evenly w-full h-20 bg-sub-alt-color rounded-lg">
       {{ svgNavbar("api.download_user_data", "floppy-disk") }}
       {{ svgNavbar("api.delete_user_data", "trash-can_") }}
@@ -29,12 +24,12 @@
     </div>
   </div>
 
-  <div class="flex flex-col col-span-6 gap-2 rounded-lg bg-sub-alt-color">
-    <div class="flex flex-col flex-grow items-center justify-around">
+  <div class="flex flex-col col-span-2 gap-2 rounded-lg bg-sub-alt-color">
+    <div class="flex flex-col flex-grow items-center justify-around mt-4">
       <div id="timer-display-container" class="w-2/3 h-8 p-1 rounded-lg transition-colors bg-bg-color">
-        <div id="timer-display-progress" class="max-w-full h-full rounded-md transition-colors duration-300 bg-sub-color"></div>
-      </div>
-    <img id="timer-display-gif" src="{{ url_for('static', filename='/images/gifs/timer/paused/ht.gif') }}" class="w-2/3 rounded-lg select-none">
+      <div id="timer-display-progress" class="max-w-full h-full rounded-md transition-colors duration-300 bg-sub-color"></div>
+    </div>
+    <img id="timer-display-gif" src="{{ url_for('static', filename='/images/gifs/timer/paused/neco-arc.png') }}" class="rounded-lg select-none">
     </div>
     <div class="flex flex-row flex-none h-20 items-center justify-center gap-4">
       {{ svgTimerButton(svgName="pause", buttonId="timer-button-pause") }}
@@ -43,7 +38,17 @@
     </div>
   </div>
   
-  <div class="col-span-2 rounded-lg bg-sub-alt-color">
+  <div class="flex flex-col col-span-1 gap-2">
+    <div id="chatbot-message-container" class="flex flex-col flex-grow justify-start w-full h-0 gap-2 overflow-y-auto scroll-smooth snap-mandatory snap-always snap-y">
+      {% for item in chatbotMessages %}
+      {% if item.type == "user" %}
+      {{ utilsItem(content=item.value, apiRouteEdit="api.edit_user_message", apiRouteDelete="api.delete_user_message", inputNameEdit="chatbot-msg-edit", inputNameDelete="chatbot-msg-delete") }}
+      {% else %}
+      {{ chatbotServerMsg(content=item.value, apiRouteReload="api.update_server_message", inputNameReload="chatbot-server-msg-edit") }}
+      {% endif %}
+      {% endfor %}
+    </div>
+    {{ utilsBar(apiRoute="api.generate_server_message", formId="chatbot-input-form", outerDivId="chatbot-input-outerDiv", inputId="chatbot-input-input", buttonId="chatbot-input-button", inputName="chatbot-user-msg-input", svgName="circle-right") }}
   </div>
 </div>
 {% endblock %}
