--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -37,18 +37,6 @@
 {% endmacro %}
 
 
-{% macro svgTodolistItemForm(content="", svgName="", formClass="", inputName="", inputClass="", buttonClass="", buttonType="submit") %}
-<form action="{{ API_ROUTES['todolist'] }}" method="post" class="select-none {{ formClass }}">
-  <input type="hidden" name="{{ inputName }}" class="{{ inputClass }}" value="{{ content|e }}" autocomplete="off">
-  <button type="{{ buttonType }}" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color {{ buttonClass }}">
-    <svg class="fill-inherit inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS[svgName].dimension }}">
-      {{ ICONS[svgName].path|safe }}
-    </svg>
-  </button>
-</form>
-{% endmacro %}
-
-
 {% macro svgTimerButton(svgName="", buttonId="") %}
 {{ svgBaseButton(svgName=svgName, svgClass="inline-block w-6 h-6", buttonId=buttonId) }}
 {% endmacro %}
@@ -59,22 +47,35 @@
 {% endmacro %}
 
 
-<!-- added undeclared classNames for DOM traversal -->
-{% macro todolistItem(content="") %}
-<div class="flex flex-row items-center py-2 px-4 max-w-full h-fit bg-sub-alt-color rounded-lg group snap-start transition-colors duration-300 todolist-item">
-  <div class="flex-grow line-clamp-[99] transition-all duration-300 text-sub-color hover:text-text-color focus:text-text-color cursor-pointer caret-caret-color todolist-item-content text-sm">{{ content|e }}</div>
-  <div class="flex flex-col flex-none justify-between pb-[1%] text-sub-color opacity-0 group-hover:opacity-100 transition-all duration-300 todolist-item-edit-form">
-    <form action="{{ url_for('api.edit_todolist_item') }}" method="post" class="select-none todolist-item-edit-form">
-      <input type="hidden" name="todolist-item-edit-prev" value="{{ content|e }}" autocomplete="off">
-      <input type="hidden" name="todolist-item-edit" class="todolist-item-edit-content" value="{{ content|e }}" autocomplete="off">
-      <button type="button" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color focus:text-text-color todolist-item-edit-button">
+{% macro utilsBar(apiRoute, formId="", outerDivId="", inputId="", buttonId="", inputName="", buttonType="submit", svgName="") %}
+<form id="{{ formId }}" {% if apiRoute %}action="{{ url_for(apiRoute) }}" method="post"{% endif %} class="flex-none h-fit w-full">
+  <div id="{{ outerDivId }}" class="flex flex-row items-center py-2 px-4 bg-sub-alt-color transition-colors duration-300 rounded-lg">
+    <input type="text" name="{{ inputName }}" id="{{ inputId }}" class="flex-grow w-20 rounded-lg caret-transparent text-text-color bg-transparent transition-colors duration-300 preventEnterKey" autocomplete="off">
+    <button type="{{ buttonType }}" id="{{ buttonId }}" class="flex-none transition-colors duration-300 text-sub-color hover:text-text-color">
+      <svg class="w-4 h-4 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS[svgName].dimension }}">
+        {{ ICONS[svgName].path|safe }}
+      </svg>
+    </button>
+  </div>
+</form>
+{% endmacro %}
+
+
+{% macro utilsItem(apiRouteEdit, apiRouteDelete, inputNameEdit, inputNameDelete, content="") %}
+<div class="flex flex-row items-center py-2 px-4 max-w-full h-fit bg-sub-alt-color rounded-lg group snap-start transition-colors duration-300 utils-item">
+  <div class="flex-grow line-clamp-[99] transition-all duration-300 text-sub-color hover:text-text-color focus:text-text-color cursor-pointer caret-caret-color text-sm utils-item-content item-copy-content">{{ content|e }}</div>
+  <div class="flex flex-col flex-none justify-between pb-[1%] text-sub-color opacity-0 group-hover:opacity-100 transition-all duration-300">
+    <form action="{{ url_for(apiRouteEdit) }}" method="post" class="select-none utils-item-edit-form">
+      <input type="hidden" name="{{ inputNameEdit }}-prev" value="{{ content|e }}" autocomplete="off">
+      <input type="hidden" name="{{ inputNameEdit }}" class="utils-item-edit-content" value="{{ content|e }}" autocomplete="off">
+      <button type="button" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color focus:text-text-color utils-item-edit-button">
         <svg class="fill-inherit inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS['pen-to-square_'].dimension }}">
           {{ ICONS['pen-to-square_'].path|safe }}
         </svg>
       </button>
     </form>
-    <form action="{{ url_for('api.delete_todolist_item') }}" method="post" class="select-none">
-      <input type="hidden" name="todolist-item-delete" value="{{ content|e }}" autocomplete="off">
+    <form action="{{ url_for(apiRouteDelete) }}" method="post" class="select-none">
+      <input type="hidden" name="{{ inputNameDelete }}" value="{{ content|e }}" autocomplete="off">
       <button type="submit" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color focus:text-text-color">
         <svg class="fill-inherit inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS['trash-can_'].dimension }}">
           {{ ICONS['trash-can_'].path|safe }}
@@ -86,15 +87,19 @@
 {% endmacro %}
 
 
-{% macro todolistBar(method="post", outerDivId="", inputId="", buttonId="", inputName="", buttonType="submit", svgName="") %}
-<form action="{{ url_for('api.add_todolist_item' )}}" method="{{ method }}" class="flex-none h-fit w-full">
-  <div id="{{ outerDivId }}" class="flex flex-row items-center py-2 px-4 bg-sub-alt-color transition-colors duration-300 rounded-lg">
-    <input type="text" name="{{ inputName }}" id="{{ inputId }}" class="flex-grow w-20 rounded-lg caret-transparent text-text-color bg-transparent transition-colors duration-300 preventEnterKey" autocomplete="off">
-    <button type="{{ buttonType }}" id="{{ buttonId }}" class="flex-none transition-colors duration-300 text-sub-color hover:text-text-color">
-      <svg class="w-4 h-4 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS[svgName].dimension }}">
-        {{ ICONS[svgName].path|safe }}
-      </svg>
-    </button>
+{% macro chatbotServerMsg(apiRouteReload, inputNameReload, content="") %}
+<div class="flex flex-row items-center py-2 px-4 max-w-full h-fit bg-sub-alt-color rounded-lg group snap-start transition-colors duration-300 utils-item">
+  <div class="flex-grow line-clamp-[99] transition-all duration-300 text-sub-color hover:text-text-color focus:text-text-color cursor-pointer caret-caret-color text-sm utils-item-content item-copy-content">{{ content|e }}</div>
+  <div class="flex flex-col flex-none justify-between pb-[1%] text-sub-color opacity-0 group-hover:opacity-100 transition-all duration-300">
+    <form action="{{ url_for(apiRouteReload) }}" method="post" class="select-none utils-item-edit-form">
+      <input type="hidden" name="{{ inputNameReload }}" value="{{ content|e }}" autocomplete="off">
+      <button class="utils-item-edit-button"></button>
+      <button type="submit" class="transition-colors duration-300 fill-current text-sub-color hover:text-text-color focus:text-text-color">
+        <svg class="fill-inherit inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 {{ ICONS['rotate'].dimension }}">
+          {{ ICONS['rotate'].path|safe }}
+        </svg>
+      </button>
+    </form>
   </div>
-</form>
+</div>
 {% endmacro %}
