--- a/app/templates/views/stats.html
+++ b/app/templates/views/stats.html
@@ -7,7 +7,7 @@
     <div class="flex flex-col-reverse items-start w-10 h-full gap-2 group">
       <div class="w-full -mt-3 text-center text-sub-color">{{ item[0] }}</div>
       <div class="w-full text-center text-sub-color">{{ item[1] }}</div>
-      <div class="w-full rounded-lg bg-sub-color group-hover:bg-main-color transition-colors duration-300" style="height: {{ item[2] * 100 / max_session_count + 1 }}%;"></div>
+      <div class="w-full rounded-lg bg-sub-color group-hover:bg-main-color transition-colors duration-300" style="height: {{ item[2] * 100 / max_session_count }}%;"></div>
       <div class="w-full text-center text-main-color transition-all duration-700 opacity-0 group-hover:opacity-100">{{ item[2] }}</div>
     </div>
     {% endfor %}
